@@ -2326,7 +2326,7 @@ switch(ftype)
 		GLOBALS->block_xy_update = (GLOBALS->num_notebook_pages > 1); /* let window always resize if 1 tab */
 #endif
 		wave_gconf_client_set_string("/current/savefile", s);
-		read_save_helper(s, NULL, NULL, NULL, NULL);
+		read_save_helper(s, NULL, NULL, NULL, NULL, NULL);
 		GLOBALS->block_xy_update = 0;
 		rc = 1;
 		break;
